traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:36: error: ';' expected but 'else' found.
  else {
  ^Snake:45: error: expected class or object definition
def serpenter() {
^