traversal.snake.Snake.scala.code
override def run() {
  
  while (!posFinale()) {
    
    serpenter()
    
  }

}


def posFinale() {
  
  if (estFaceMur() && getDirection() == Direction.EST) {
     
      gauche();
      return !estFaceMur()
      
    } 
    
    else {
      
      if (estFaceMur() && getDirection() == Direction.EST) {
        
        droite();
        return !estFaceMur()
        
      }
      
      return false
      
    }
    
  }
  
  else {
    
    return false
    
  }
  
}


def serpenter() {
  
  if (getDirection() == Direction.EST) {
    
    if (!estFaceMur()) {
      
      gauche();
      avance();
      gauche();
      
    }
    
	else {
    
    if (getDirection() == Direction.OUEST) {
      
      if (!estFaceMur()) {
      
      droite();
      avance();
      droite();
      
    }
      
    }
    
  }
    
  }